--- a/index.css
+++ b/index.css
@@ -68,7 +68,8 @@ main {
 }
 
 .avatar {
-    width: 15vh;
+    width: 65px;
+    height: 65px;
     border: 2px solid #000721;
     max-width:100%;
     opacity: 0.8;
@@ -78,7 +79,8 @@ main {
 
 @media(min-width:550px){
     .avatar {
-        width: 25vh;
+        width: 150px;
+        height: 150px;
     }
 }
 
@@ -144,22 +146,17 @@ main {
 }
 
 .dice, .placeholder-dice{
-    height:5.5vh;
-    width:5.5vh;
+    height:40px;
+    width:40px;
     background: #fff;   
     border-radius: 5px;
     border:1px solid #666;
     color:#000721;
     text-align: center;
     line-height: 6vh;
-}
-
-@media(min-width:550px){
-.dice-container .dice, .dice-container .placeholder-dice{
-    height:10vh;
-    width:10vh;
-    line-height: 10.5vh;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .dice-container .placeholder-dice{
